# psindustrializer

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  aclocal.m4  config.guess  config.h.in  configure  configure.ac  configure.in  power_station_logo.xpm  psindustrializer.desktop
doc/: QuickStart.txt
po/: ChangeLog  POTFILES.in  psindustrializer.pot  ru.gmo  ru.po
psphymod/: Makefile.am  Makefile.in  psmetalobj.c  psmetalobj.h  psphymod.h
src/: Makefile.am  Makefile.in  alsa.c  alsa.h  api-wrapper.c  api-wrapper.h  callbacks.c  callbacks.h  esnd.c  esnd.h  interface.c  interface.h  jack.c  jack.h  main.c  main.h  pulse.c  pulse.h  resource.h  xml-parser.c  xml-parser.h
