## Process this file with automake to produce Makefile.in

SUBDIRS = po psphymod src

EXTRA_DIST = TODO README.md psindustrializer.spec \
	psindustrializer.desktop \
	psindustrializerrc \
	psindustrial.png \
	power_station_logo.xpm

util_DATA = @PACKAGE@.desktop
utildir = $(datadir)/gnome/apps/Multimedia

xpm_DATA = power_station_logo.xpm
xpmdir = $(datadir)/@PACKAGE@

icon_DATA = @PACKAGE@.png
icondir = $(datadir)/pixmaps
